[metadata]
name = indexhr
author = Marinko Peso
author-email = marinko.peso@gmail.com
summary = index.hr basic news content in the terminal
description-file = README.md
home-page = https://github.com/marinko-peso/index-hr
license = MIT
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
keywords =
    index
    hr
    terminal
    cli
    news
    croatia

[files]
packages =
    indexhr

[entry_points]
console_scripts =
    index-hr = indexhr.cli:main
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain

[pycodestyle]
count = False
max-line-length = 160
statistics = True
